po: update po/id_ID/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/id_ID/pledge.po
+++ b/po/id_ID/pledge.po
@@ -8,9 +8,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 14:16+0000\n"
-"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -49,12 +49,12 @@ msgid "Pledge Payment Status"
 msgstr "Keadaan Pembayaran Perjanjian"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1 - jatuh tempo pada %2 (terlambat)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "%1 - jatuh tempo pada %2 (terlambat)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - jatuh tempo pada %2"
+msgid "%1 - due on %2"
+msgstr "%1 - jatuh tempo pada %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -78,14 +78,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Selang Keseringan Perjanjian"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Keadaan Perjanjian %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Keadaan Pembayaran Perjanjian %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "Janji adalah Percobaan"
 
@@ -96,6 +88,10 @@ msgstr "Jenis Finansial - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Halaman Finansial - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr "ID Kontak %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -145,10 +141,6 @@ msgstr "Tanggal Perubahan Janji"
 msgid "Pledge Cancelled Date"
 msgstr "Tanggal Pembatalan Janji"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Janji Kontak Kehormatan"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Angka Maksimal Pengingat"
@@ -187,12 +179,12 @@ msgid "Reminders Sent"
 msgstr "Peringatan Dikirim"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Sunting Pembayaran Perjanjian Terjadwal"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "Jadwal Pembayaran Perjanjian telah diperbaharui."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Janji oleh"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -299,6 +291,10 @@ msgid "Pledger Name or Email"
 msgstr "Nama atau Email Pejanji "
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr "Nama Penjanji"
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Cari Perjanjian"
 
@@ -307,12 +303,9 @@ msgid "Delete Pledges"
 msgstr "Hapus Perjanjian"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Hapus Perjanjian: %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Jumlah Perjanjian Terpilih: %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count janji dihapus."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -321,6 +314,30 @@ msgstr "Cetak Daftar Perjanjian"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "Mesin Perjanjian CiviCRM"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "akses CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Lihat janji"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "sunting janji"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Buat dan Perbaharui janji"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "hapus di CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Hapus janji"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -338,11 +355,11 @@ msgid ""
 "pledge payments."
 msgstr "Membatalkan perjanjian ini juga akan membatalkan jadwal (dan tidak lengkap) pembayaran perjanjian."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Lihat Perjanjian"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Sunting Perjanjian"
 
@@ -350,7 +367,7 @@ msgstr "Sunting Perjanjian"
 msgid "Cancel Pledge"
 msgstr "Batal Perjanjian"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Hapus Perjanjian"
 
@@ -371,20 +388,12 @@ msgid "Pledge Search"
 msgstr "Pencarian Janji "
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Cetak Perjanjian"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Keluarkan Perjanjian"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Sunting Pembayaran Perjanjian Terjadwal"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Tanggal Terjadwal untuk Pembayaran Perjanjian."
+msgid "Adjust scheduled amount"
+msgstr "Sesuaikan bilangan terjadwal"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -393,10 +402,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Anda tidak akan dapat mengirim pengakuan untuk janji ini, karena tidak ada alamat email terekam untuk kontak ini. Jika anda ingin pengakuan dikirim ketika janji ini terekam, klik Batal dan kemudian klik Sunting dari tab Ringkasan untuk menambahkan alamat email sebelum merekam janji."
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Perjanjian Baru"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -413,6 +418,10 @@ msgid ""
 msgstr "Pertimbangkan membatalkan janji sebaliknya jika anda ingin merawat jejak pemeriksaan dan menghindari kehilangan data pembayaran. Untuk menyetel keadaan gadai menjadi Dibatalkan dan pembatalan janji pembayaran yang-belum-dibayar, pertama-tama klik Batal di formulir ini. Kemudian klik &gt; tautan lanjut dari daftar gadai, dan pilih tindakan Batal."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Janji oleh"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -420,6 +429,7 @@ msgid ""
 msgstr "Jumlah janji telah berubah dikarenakan pada penyesuaian pembayaran. Aslinya jumlah bilangan adalah %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "angsuran dari"
 
@@ -442,10 +452,6 @@ msgstr "Tanggal pertama pembayaran janji."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Otomatis emial pengakuan dari janji ini ke %1?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Otomatis email pengakuan dari janji ini ke"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -471,20 +477,12 @@ msgstr "Janji \"Tertunda\" sampai pembayaran pertama diterima. Ketika pembayaran
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
-msgstr "Klik OK untuk menyimpan rekaman Janji DAN mengirim pengakuan ke %1 sekarang."
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
+msgstr "Klik OKE untuk menyimpan rekaman Janji ini DAN mengirim pengakuan ke %1 sekarang."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Janji Oleh"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr "angsuran dari"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "setiap"
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -511,10 +509,6 @@ msgid "Payments Ended Date"
 msgstr "Tanggal Akhir Pembayaran"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Tidak ada hasil janji yang cocok ditemukan."
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -527,8 +521,16 @@ msgid ""
 msgstr "Jika anda mencari dengan tanggal atau jangkauan bilangan, coba dengan nilai jangkauan yang lebih luas ."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Klik %1 untuk melihat pembayaran janji."
+msgid "Click arrow to view pledge payments."
+msgstr "Klik panah untuk melihay pembayaran janji."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Tampilkan pembayaran"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Sembunyikan pembayaran"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -548,10 +550,6 @@ msgstr "Yang Harus Dibayar"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Tanggal Mulai"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Janji dibuat"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -602,20 +600,12 @@ msgid "Amount Paid"
 msgstr "Bilangan Dibayar"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href='%1'>Lihat Pembayaran</a>"
+msgid "Credit Card Payment"
+msgstr "Pembayaran Kartu Kredit"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Rekam Pembayaran (Cek, Tunai, EFT ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Ajukan Pembayaran Kartu kredit</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Sunting Pembayaran Terjadwal</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Sunting Pembayaran Terjadwal"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -635,9 +625,10 @@ msgstr "Agar pengingat dikirim:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "Administrator situs anda harus mengkonfigurasikan  penyediaan bahasa yang memperbaharui keadaan pembayaran janji dan mengirim pengingat (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "Administrator situs anda harus mengkonfigurasi pekerjaan terjadwal (Mengelola > Pengaturan Sistem > Pekerjaan Terjadwal) yang akan memperbaharui keadaan pembayaran janji dan mengirim ke pengingat."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -657,13 +648,17 @@ msgstr "Janji diterima dari %1 sejak awal."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Klik <a href='%1'>TambahJanji</a> untuk merekam janji baru yang diterima dari kontak ini."
+msgstr "Klik <a %1>Tambah Janji</a> untuk merekam janji baru yang diterima dari kontak ini."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Tidak ada janji yang direkam dari kontak ini."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -789,93 +784,38 @@ msgstr "Terima kasih atas dukungan murah hati anda."
 msgid "Pledge Payment Reminder"
 msgstr "Pengingat Pembayaran Janji"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 - jatuh tempo pada %2 (terlambat)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 - jatuh tempo pada %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Janji Dihapus: %1 (Jumlah Terpilih: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Sesuaikan bilangan terjadwal"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Klik OKE untuk menyimpan rekaman Janji ini DAN mengirim pengakuan ke %1 sekarang."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Klik panah untuk melihay pembayaran janji."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Tampilkan pembayaran"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Sembunyikan pembayaran"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Pembayaran Kartu Kredit"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Sunting Pembayaran Terjadwal"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "Administrator situs anda harus mengkonfigurasi pekerjaan terjadwal (Mengelola > Pengaturan Sistem > Pekerjaan Terjadwal) yang akan memperbaharui keadaan pembayaran janji dan mengirim ke pengingat."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Klik <a %1>Tambah Janji</a> untuk merekam janji baru yang diterima dari kontak ini."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
-msgstr "ID Kontak %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
+msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
-msgstr "Nama Penjanji"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
+msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count janji dihapus."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "akses CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Lihat janji"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "sunting janji"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Buat dan Perbaharui janji"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "hapus di CiviPledge"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Hapus janji"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
