po: update po/id_ID/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/id_ID/pcp.po
+++ b/po/id_ID/pcp.po
@@ -7,9 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 13:43+0000\n"
-"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:06+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,6 +33,10 @@ msgstr "Sunting Halaman Anda"
 msgid "Tell Friends"
 msgstr "Beritahu Teman"
 
+#: CRM/PCP/BAO/PCP.php
+msgid "URL for this Page"
+msgstr "URL untuk halaman ini"
+
 #: CRM/PCP/BAO/PCP.php CRM/PCP/Form/PCPAccount.php
 msgid "Update Contact Information"
 msgstr "Perbaharui Informasi Kontak"
@@ -46,8 +50,8 @@ msgid "Approval required"
 msgstr "Persetujuan dibutuhkan"
 
 #: CRM/PCP/BAO/PCP.php
-msgid "Supporter profile"
-msgstr "Profil pendukung"
+msgid "Owner Email Notification"
+msgstr "Pemilik Email Penegasan"
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Allow 'Tell a friend' functionality"
@@ -67,15 +71,15 @@ msgstr "Teks tautan 'Buat Halaman Kampanye Pribadi'"
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This event registration is being made thanks to effort of "
+"This event registration is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr "Pendaftaran acara ini sedang dibuat terima kasih untuk usaha anda <strong>%1</strong>, yang mendukung kampanye kami."
+msgstr "Pendaftaran acara ini sedang dibuat terima kasih atas usaha <strong>%1</strong>, yang mendukung kampanye kami."
 
 #: CRM/PCP/BAO/PCP.php
 msgid ""
-"This contribution is being made thanks to effort of <strong>%1</strong>, who"
-" supports our campaign. "
-msgstr "Sumbangan ini sedang dibuat terima kasih atas usaha anda untuk <strong>%1</strong>, yang mendukung kampanye kami."
+"This contribution is being made thanks to the efforts of "
+"<strong>%1</strong>, who supports our campaign. "
+msgstr "Sumbangan sedang dibuat terima kasih atas usaha <strong>%1</strong>, yang mendukung kampanye kami."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -151,6 +155,12 @@ msgid ""
 "is disabled. Please contact the site administrator if you need assistance."
 msgstr "Profil pendukung tidak disetel untuk Halaman Kampanye Pribadi ini atau profil ditiadakan. Silahkan hubungi pengelola situs jika anda butuh bantuan."
 
+#: CRM/PCP/BAO/PCP.php
+msgid ""
+"Owner Notification is not set for this Personal Campaign Page. Please "
+"contact the site administrator if you need assistance."
+msgstr "Penegasan Pemilik tidak disetel untuk Halaman Kampanye Pribadi. Silahkan hubungi administrator situs jika anda butuh bantuan."
+
 #: CRM/PCP/DAO/PCP.php
 msgid "Personal Campaign Page ID"
 msgstr "ID Halaman Kampanye Pribadi"
@@ -185,6 +195,10 @@ msgid "Target Entity Type"
 msgstr "Jenis Kesatuan Sasaran"
 
 #: CRM/PCP/DAO/PCPBlock.php
+msgid "Owner Notification"
+msgstr "Pemilik Pemberitahuan"
+
+#: CRM/PCP/DAO/PCPBlock.php
 msgid "Tellfriend Limit"
 msgstr "Batasan Beritahu Teman"
 
@@ -199,6 +213,10 @@ msgstr "Setel Halaman Kampanye Pribadi - Langkah 2"
 #: CRM/PCP/Form/Campaign.php
 msgid "Edit Your Personal Campaign Page"
 msgstr "Sunting Halaman Kampanye Pribadi Anda"
+
+#: CRM/PCP/Form/Campaign.php
+msgid "Welcome"
+msgstr ""
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Your Goal"
@@ -233,26 +251,16 @@ msgid "Honor Roll"
 msgstr "Gulungan Kehormatan"
 
 #: CRM/PCP/Form/Campaign.php
+msgid "Notify me via email when someone donates to my page"
+msgstr "Beritahu saya melalui email ketika seseorang menyumbang ke halaman saya"
+
+#: CRM/PCP/Form/Campaign.php
 msgid "Goal Amount should be a numeric value greater than zero."
 msgstr "Sasaran Bilangan harus nilai numerik lebih besar dari nol."
 
 #: CRM/PCP/Form/Campaign.php
 msgid "Button Text must be less than 64 characters."
 msgstr "Teks Tombol harus kurang dari 64 karakter."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Your picture or image file cannot be larger than 360 x 360 pixels in size."
-msgstr "Foto atau gambar anda tidak boleh lebih besar dari 360 x 360 pixel dalam ukuran."
-
-#: CRM/PCP/Form/Campaign.php
-msgid "The dimensions of the image you have selected are %1 x %2."
-msgstr "Ukuran gambar yang ada pilih adalah %1 x %2."
-
-#: CRM/PCP/Form/Campaign.php
-msgid ""
-"Please shrink or crop the file or find another smaller image and try again."
-msgstr "Silahkan susutkan atau potong berkas atau temukan gambar lebih kecil dan coba lagi."
 
 #: CRM/PCP/Form/Campaign.php
 msgid ""
@@ -358,10 +366,6 @@ msgstr "Halaman Diadakan"
 msgid "Source Type"
 msgstr "Jenis Sumber"
 
-#: CRM/PCP/Form/PCP.php
-msgid "Event Page"
-msgstr "Halaman Acara"
-
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
 "We can't load the requested web page due to an incomplete link. This can be "
@@ -436,6 +440,10 @@ msgid "Send emails inviting your friends to support your campaign!"
 msgstr "Kirim email mengundang teman anda untuk mendukung kampanye anda! "
 
 #: CRM/PCP/Page/PCPInfo.php
+msgid "Copy this link to share directly with your network!"
+msgstr "Salin tautan ini untuk berbagi secara langsung dengan jaringan anda! "
+
+#: CRM/PCP/Page/PCPInfo.php
 msgid "Update your personal contact information"
 msgstr "Perbaharui informasi kontak pribadi anda"
 
@@ -475,9 +483,15 @@ msgstr "Teks untuk sumbangan atau tombol daftar."
 #: templates/CRM/PCP/Form/Campaign.tpl
 msgid ""
 "If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported your campaign. (People will"
-" have the option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Jika pilihan ini di centang, \"gulungan kehormatan\" akan ditampilkan dengan nama (atau nama panggilan) dari orang yang mendukung kampanye anda. (Orang akan mempunyai pilihan untuk tetap tanpa nama. Nama mereka tidak akan didaftarkan.) "
+"names (or nicknames) of the people who supported you. (Donors will have the "
+"option to remain anonymous. Their names will NOT be listed.)"
+msgstr "Jika pilihan ini dicentang, \"gulungan kehormatan\" akan ditampilkan dengan nama (atau nama panggilan) dari orang yang mendukung anda. (Penyumbang akan mempunyai pilihan untuk tetap anonim. Nama merekan TIDAK akan ditampilkan.)"
+
+#: templates/CRM/PCP/Form/Campaign.tpl
+msgid ""
+"If this option is checked, you will receive an email notification when "
+"people contribute to your campaign."
+msgstr "Jika pilihan ini dicentang, anda akan menerima penegasan email ketika orang menyumbang ke kampanye anda."
 
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid ""
@@ -487,10 +501,6 @@ msgid ""
 "Campaign Page are recorded as \"soft credits\" for the supporter who created"
 " that campaign page."
 msgstr "Ketika Halaman Kampanye Pribadi diadakan, pemilih akan melihat tautan mengundang mereka untuk membuat halaman pengumpulan dana sendiri setelah membuat seumbangan. Sumbangan dari orang yang datang melalui Halaman Kampanye Pribadi direkam sebagai \"kredit lunak\" untuk pendukung yang membuat halaman kampanye. "
-
-#: templates/CRM/PCP/Form/Contribute.hlp
-msgid "Approval"
-msgstr "Persetujuan"
 
 #: templates/CRM/PCP/Form/Contribute.hlp templates/CRM/PCP/Form/Event.hlp
 msgid "Email Notification"
@@ -726,6 +736,38 @@ msgstr "Lihat Halaman"
 msgid "Linked to Contribution Page"
 msgstr "Tautkan ke Halaman Sumbangan"
 
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "You have received a donation at your personal page"
+msgstr "Anda telah menerima sumbangan di halaman pribadi anda"
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Your fundraising total has been updated."
+msgstr "Jumlah penggalangan dana anda telah diperbaharui."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's information is listed below.  You can choose to contact them and"
+" convey your thanks if you wish."
+msgstr "Informasi penyumbang ditampilkan dibawah ini. Anda dapat memilih untuk menghubungi mereka dan menyapaikan terima kasih jika anda harapkan."
+
+#: xml/templates/message_templates/pcp_owner_notify_html.tpl
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid ""
+"The donor's name has been added to your honor roll unless they asked not to "
+"be included."
+msgstr "Nama penyumbang telah ditambahkan ke gulungan kehormatan meskipun mereka meminta untuk tidak disertakan."
+
+#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
+msgid "Someone has just donated to your personal campaign page"
+msgstr "Seseorang telah menyumbangkan ke halaman kampanye pribadi anda."
+
+#: xml/templates/message_templates/pcp_owner_notify_text.tpl
+msgid "Personal Campaign Page Owner Notification"
+msgstr "Pemilik Penegasan Halaman Kampanye Pribadi"
+
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid "Your Personal Campaign Page"
@@ -758,9 +800,9 @@ msgstr "Pergi ke halaman anda"
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
 msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to edit\n"
-"your page, tell friends, and update your contact info."
-msgstr "Ketika anda melihat halaman kampanye SELAGI MASUK, halaman menyertakan tautan untuk menyunting\nhalaman anda, beritahu teman, dan perbaharui info kontak anda."
+"When you view your campaign page WHILE LOGGED IN, the page includes links to"
+" edit your page, tell friends, and update your contact info."
+msgstr "Ketika anda melihat halaman kampanye anda KETIKA MASUK, halaman menyertakan tautan untuk merubah halaman anda, beritahu teman, dan sunting info kontak anda."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -778,9 +820,10 @@ msgstr "Pertanyaan, Kirim email ke"
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
-"Your personal campaign page has been reviewed. There were some issues with the content\n"
-"which prevented us from approving the page. We are sorry for any inconvenience."
-msgstr "Halaman kampanye pribadi anda telah ditinjau. Terdapat beberapa masalah dengan isi\ndimana mencegah kami dari menyetui halaman. Kami mita maaf untuk ketidaknyamanan."
+"Your personal campaign page has been reviewed. There were some issues with "
+"the content which prevented us from approving the page. We are sorry for any"
+" inconvenience."
+msgstr "Halaman kampanye pribadi anda telah ditinjau. Terdapat beberapa masalah dengan isi dimana mencegah kami dari menyetujui halaman. Kami minta maaf untuk ketidaknyamanan ini."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -875,102 +918,42 @@ msgstr "Klik atau tempel tautan ini ke perambah anda dan ikuti prompt"
 msgid "Click or paste this link into your browser"
 msgstr "Klik atau tempel tautan ini ke perambah anda"
 
-#: CRM/PCP/BAO/PCP.php
-msgid "URL for this Page"
-msgstr "URL untuk halaman ini"
+#: CRM/PCP/DAO/PCP.php
+msgid "PCP Block"
+msgstr ""
 
-#: CRM/PCP/Page/PCPInfo.php
-msgid "Copy this link to share directly with your network!"
-msgstr "Salin tautan ini untuk berbagi secara langsung dengan jaringan anda! "
+#: CRM/PCP/DAO/PCP.php
+msgid "Use Thermometer?"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, an \"honor roll\" will be displayed with the "
-"names (or nicknames) of the people who supported you. (Donors will have the "
-"option to remain anonymous. Their names will NOT be listed.)"
-msgstr "Jika pilihan ini dicentang, \"gulungan kehormatan\" akan ditampilkan dengan nama (atau nama panggilan) dari orang yang mendukung anda. (Penyumbang akan mempunyai pilihan untuk tetap anonim. Nama merekan TIDAK akan ditampilkan.)"
+#: CRM/PCP/DAO/PCP.php
+msgid "Show Honor Roll?"
+msgstr ""
 
-#: CRM/PCP/BAO/PCP.php
-msgid "Owner Email Notification"
-msgstr "Pemilik Email Penegasan"
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This event registration is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Pendaftaran acara ini sedang dibuat terima kasih atas usaha <strong>%1</strong>, yang mendukung kampanye kami."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"This contribution is being made thanks to the efforts of "
-"<strong>%1</strong>, who supports our campaign. "
-msgstr "Sumbangan sedang dibuat terima kasih atas usaha <strong>%1</strong>, yang mendukung kampanye kami."
-
-#: CRM/PCP/BAO/PCP.php
-msgid ""
-"Owner Notification is not set for this Personal Campaign Page. Please "
-"contact the site administrator if you need assistance."
-msgstr "Penegasan Pemilik tidak disetel untuk Halaman Kampanye Pribadi. Silahkan hubungi administrator situs jika anda butuh bantuan."
+#: CRM/PCP/DAO/PCP.php
+msgid "Notify Owner?"
+msgstr ""
 
 #: CRM/PCP/DAO/PCPBlock.php
-msgid "Owner Notification"
-msgstr "Pemilik Pemberitahuan"
+msgid "PCP Block ID"
+msgstr ""
 
-#: CRM/PCP/Form/Campaign.php
-msgid "Notify me via email when someone donates to my page"
-msgstr "Beritahu saya melalui email ketika seseorang menyumbang ke halaman saya"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity"
+msgstr ""
 
-#: templates/CRM/PCP/Form/Campaign.tpl
-msgid ""
-"If this option is checked, you will receive an email notification when "
-"people contribute to your campaign."
-msgstr "Jika pilihan ini dicentang, anda akan menerima penegasan email ketika orang menyumbang ke kampanye anda."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Target Entity ID"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "You have received a donation at your personal page"
-msgstr "Anda telah menerima sumbangan di halaman pribadi anda"
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Approval Required?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Your fundraising total has been updated."
-msgstr "Jumlah penggalangan dana anda telah diperbaharui."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell a Friend Enabled?"
+msgstr ""
 
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's information is listed below.  You can choose to contact them and"
-" convey your thanks if you wish."
-msgstr "Informasi penyumbang ditampilkan dibawah ini. Anda dapat memilih untuk menghubungi mereka dan menyapaikan terima kasih jika anda harapkan."
-
-#: xml/templates/message_templates/pcp_owner_notify_html.tpl
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid ""
-"The donor's name has been added to your honor roll unless they asked not to "
-"be included."
-msgstr "Nama penyumbang telah ditambahkan ke gulungan kehormatan meskipun mereka meminta untuk tidak disertakan."
-
-#: xml/templates/message_templates/pcp_owner_notify_subject.tpl
-msgid "Someone has just donated to your personal campaign page"
-msgstr "Seseorang telah menyumbangkan ke halaman kampanye pribadi anda."
-
-#: xml/templates/message_templates/pcp_owner_notify_text.tpl
-msgid "Personal Campaign Page Owner Notification"
-msgstr "Pemilik Penegasan Halaman Kampanye Pribadi"
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_html.tpl
-#: xml/templates/message_templates/pcp_supporter_notify_text.tpl
-msgid ""
-"When you view your campaign page WHILE LOGGED IN, the page includes links to"
-" edit your page, tell friends, and update your contact info."
-msgstr "Ketika anda melihat halaman kampanye anda KETIKA MASUK, halaman menyertakan tautan untuk merubah halaman anda, beritahu teman, dan sunting info kontak anda."
-
-#: xml/templates/message_templates/pcp_status_change_html.tpl
-#: xml/templates/message_templates/pcp_status_change_text.tpl
-msgid ""
-"Your personal campaign page has been reviewed. There were some issues with "
-"the content which prevented us from approving the page. We are sorry for any"
-" inconvenience."
-msgstr "Halaman kampanye pribadi anda telah ditinjau. Terdapat beberapa masalah dengan isi dimana mencegah kami dari menyetujui halaman. Kami minta maaf untuk ketidaknyamanan ini."
+#: CRM/PCP/DAO/PCPBlock.php
+msgid "Tell A Friend Limit"
+msgstr ""
