--- a/po/id_ID/extension.po
+++ b/po/id_ID/extension.po
@@ -7,9 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 13:41+0000\n"
-"Last-Translator: Fery Setiawan <gembelweb@gmail.com>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,11 +26,6 @@ msgid ""
 "Your extensions cache directory (%1) is not web server writable. Please go "
 "to the <a href=\"%2\">path setting page</a> and correct it.<br/>"
 msgstr "Direktori tembolok tambahan anda (%1) bukan peladen jaringan yang dapat ditulis. Harap pergi ke <a href=\"%2\">halaman setelan jalur</a> dan perbaiki.<br />"
-
-#: CRM/Extension/Browser.php
-msgid ""
-"Not checking remote URL for extensions since ext_repo_url is set to false."
-msgstr "Tidak memeriksa URL jauh untuk ekstensi sejak ext_repo_url disetel ke salah."
 
 #: CRM/Extension/Browser.php
 msgid ""
@@ -52,10 +47,6 @@ msgid ""
 "compatible, you may be able to <a href=\"%3\">download and install "
 "extensions manually</a> (depending on access to your web server).<br />"
 msgstr "Tidak ada tambahan saat ini di direktori tambahan umum CiviCRM yang sesuai dengan versi %2 (<a href=\"%1\">permintaan tambahan dari sini</a>). Jika anda ingin memasan sebuah tambahan yang ditandai dengan tidak sesuai, anda mungkin dapat <a href=\"%3\">unduh dan pasang tambahan secara maual</a> (tergantung pada akses peladen jaringan anda).<br /> "
-
-#: CRM/Extension/Browser.php
-msgid "No Extensions Available for this Version"
-msgstr "Tidak ada Tambahan Tersedia untuk Versi ini"
 
 #: CRM/Extension/Container/Basic.php CRM/Extension/Container/Default.php
 msgid "Invalid Base Directory"
@@ -113,6 +104,13 @@ msgid ""
 msgstr "Anda tidak akan dapat memasang tambahan saat ini karena pemasangan PHP anda tidak mendukung arsip ZIP. Harap tanyakan ke pengola sistem anda untuk memasang tambahan PHP-ZIP standar."
 
 #: CRM/Extension/Downloader.php
+msgid ""
+"WARNING: The downloader may be unable to download files which require HTTP "
+"redirection. This may be a configuration issue with PHP's open_basedir or "
+"safe_mode."
+msgstr "PERINGATAN: Pengunduh mungkin tidak dapat mengunduh berkas yang membutuhkan pengalihan HTTP. Ini mungkin masalah konfigurasi dengan PHP open_basedir  atau safe_mode."
+
+#: CRM/Extension/Downloader.php
 msgid "Unable to extract the extension: bad directory structure"
 msgstr "Tidak dapat mengeluarkan tambahan: susunan direktori jelek"
 
@@ -156,9 +154,13 @@ msgid ""
 "will be preserved, but the new copy will be used."
 msgstr "Salinan dari tambahan (%1) berada di dalam pelipat sistem (%2). Salinan sistem akan dipertahankan, tetapi salinan baru akan digunakan."
 
-#: CRM/Extension/Downloader.php
+#: CRM/Extension/Manager.php
+msgid "Selected option value has been deleted."
+msgstr ""
+
+#: CRM/Extension/Browser.php
 msgid ""
-"WARNING: The downloader may be unable to download files which require HTTP "
-"redirection. This may be a configuration issue with PHP's open_basedir or "
-"safe_mode."
-msgstr "PERINGATAN: Pengunduh mungkin tidak dapat mengunduh berkas yang membutuhkan pengalihan HTTP. Ini mungkin masalah konfigurasi dengan PHP open_basedir  atau safe_mode."
+"The CiviCRM public extensions directory at %1 could not be contacted - "
+"please check your webserver can make external HTTP requests or contact "
+"CiviCRM team on <a href=\"http://forum.civicrm.org/\">CiviCRM forum</a>."
+msgstr ""
