--- a/po/it_IT/campaign.po
+++ b/po/it_IT/campaign.po
@@ -11,8 +11,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -31,6 +31,10 @@ msgstr "Campagne passate"
 
 #: CRM/Campaign/BAO/Petition.php
 msgid "No survey sid parameter. Cannot process signature."
+msgstr ""
+
+#: CRM/Campaign/BAO/Petition.php
+msgid "Petition Id and/or Activity Id is not of the type Positive."
 msgstr ""
 
 #: CRM/Campaign/BAO/Query.php
@@ -88,15 +92,7 @@ msgid "Campaign End Date"
 msgstr "Data di Termine della Campagna"
 
 #: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign Type ID"
-msgstr "ID Tipo Campagna"
-
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign Status ID"
-msgstr "ID stato Campagna"
-
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign External Identifier"
+msgid "Campaign External ID"
 msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php
@@ -131,20 +127,24 @@ msgstr "Obiettivi della Campagna"
 msgid "Goal Revenue"
 msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php CRM/Campaign/Form/Survey/Results.php
-#: templates/CRM/Campaign/Form/ResultOptions.tpl
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "Recontact Interval"
-msgstr "Intervallo di ricontatto"
+#: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
+msgid "Survey ID"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Campaign ID"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Follow up Interval"
+msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Instructions"
 msgstr "Istruzioni"
 
-#: CRM/Campaign/DAO/Survey.php templates/CRM/Campaign/Form/Search/Survey.tpl
-#: templates/CRM/Campaign/Page/Petition.tpl
-#: templates/CRM/Campaign/Page/Survey.tpl
-msgid "Release Frequency"
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Hold Duration"
 msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
@@ -156,20 +156,32 @@ msgid "Default number of contacts"
 msgstr "Numero di contatti di default"
 
 #: CRM/Campaign/DAO/Survey.php
-msgid "Last Modified Date"
-msgstr "Data ultima modifica"
+msgid "Survey Is Active"
+msgstr ""
 
 #: CRM/Campaign/DAO/Survey.php
-msgid "Bypass Confirm"
+msgid "Is Default Survey"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Created By"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Modified"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "Survey Modified On"
+msgstr ""
+
+#: CRM/Campaign/DAO/Survey.php
+msgid "No Email Verification"
 msgstr ""
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "Edit Campaign"
 msgstr "Modifica Campagna"
-
-#: CRM/Campaign/Form/Campaign.php
-msgid "Parent Id"
-msgstr "ID parente"
 
 #: CRM/Campaign/Form/Campaign.php
 msgid "- select Parent -"
@@ -325,7 +337,10 @@ msgid "Instructions for interviewers"
 msgstr "Istruzioni per gli intervistatori"
 
 #: CRM/Campaign/Form/Survey/Main.php
-msgid "Release frequency"
+#: templates/CRM/Campaign/Form/Search/Survey.tpl
+#: templates/CRM/Campaign/Page/Petition.tpl
+#: templates/CRM/Campaign/Page/Survey.tpl
+msgid "Release Frequency"
 msgstr ""
 
 #: CRM/Campaign/Form/Survey/Main.php
@@ -368,16 +383,18 @@ msgid "Create new result set"
 msgstr "Crea nuovo insieme di risultati"
 
 #: CRM/Campaign/Form/Survey/Results.php
-msgid "Create a new result set"
-msgstr "Crea un nuovo insieme di risultati"
-
-#: CRM/Campaign/Form/Survey/Results.php
 msgid "Use existing result set"
 msgstr "Usa un insieme di risultati esistente"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Select Result Set"
 msgstr "Seleziona Insieme di risultati"
+
+#: CRM/Campaign/Form/Survey/Results.php
+#: templates/CRM/Campaign/Form/ResultOptions.tpl
+#: templates/CRM/Campaign/Form/Search/Survey.tpl
+msgid "Recontact Interval"
+msgstr "Intervallo di ricontatto"
 
 #: CRM/Campaign/Form/Survey/Results.php
 msgid "Enter at least one result option."
@@ -393,10 +410,6 @@ msgstr ""
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Main Information"
-msgstr ""
-
-#: CRM/Campaign/Form/Survey/TabHeader.php
-msgid "Results"
 msgstr ""
 
 #: CRM/Campaign/Form/Survey.php
@@ -464,12 +477,20 @@ msgid "We could not found respondent for this survey to release."
 msgstr ""
 
 #: CRM/Campaign/Form/Task/Release.php
-msgid "%1 respondent(s) have been released."
+msgid "Respondent has been released."
+msgid_plural "%count respondents have been released."
+msgstr[0] ""
+msgstr[1] ""
+
+#: CRM/Campaign/Form/Task/Release.php
+msgid "Released"
 msgstr ""
 
 #: CRM/Campaign/Form/Task/Release.php
-msgid "%1 respondents did not release."
-msgstr ""
+msgid "1 respondent did not release."
+msgid_plural "%count respondents did not release."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 msgid "Could not find Survey Id."
@@ -485,8 +506,11 @@ msgid ""
 msgstr ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "You can reserve a maximum of %1 contact(s) at a time for this survey."
-msgstr ""
+msgid "You can reserve a maximum of %count contact at a time for this survey."
+msgid_plural ""
+"You can reserve a maximum of %count contacts at a time for this survey."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
 #: templates/CRM/Campaign/Form/Task/Reserve.tpl
@@ -507,11 +531,13 @@ msgid "Respondent Reservation"
 msgstr ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "%1 Contact(s) have been reserved."
-msgstr ""
+msgid "%count contact has been reserved."
+msgid_plural "%count contacts have been reserved."
+msgstr[0] ""
+msgstr[1] ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "Respondent(s) has been added to %1 group(s)."
+msgid "They have been added to %1."
 msgstr ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
@@ -519,19 +545,72 @@ msgid "Reservation Added"
 msgstr ""
 
 #: CRM/Campaign/Form/Task/Reserve.php
-msgid "Reservation did not add for %1 contact(s)."
+msgid "Reservation did not add for %count contact."
+msgid_plural "Reservation did not add for %count contacts."
+msgstr[0] ""
+msgstr[1] ""
+
+#: CRM/Campaign/Info.php
+msgid "administer CiviCampaign"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Create new campaign, survey and petition types and their status"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "manage campaign"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Create new campaigns, surveys and petitions, reserve respondents"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "reserve campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Reserve campaign contacts for surveys and petitions"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "release campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Release reserved campaign contacts for surveys and petitions"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "interview campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Record survey and petition responses from their reserved contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "GOTV campaign contacts"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "Record that contacts voted"
+msgstr ""
+
+#: CRM/Campaign/Info.php
+msgid "sign CiviCRM Petition"
 msgstr ""
 
 #: CRM/Campaign/Page/AJAX.php
 msgid "Respondent Reserved."
 msgstr ""
 
-#: CRM/Campaign/Page/AJAX.php
-msgid "Vote Recorded"
-msgstr "Voto Registrato"
+#: CRM/Campaign/Page/AJAX.php templates/CRM/Campaign/Form/Gotv.tpl
+msgid "Vote Recorded."
+msgstr ""
 
-#: CRM/Campaign/Page/Campaign.php CRM/Campaign/Page/DashBoard.php
-#: templates/CRM/Campaign/Form/Campaign.tpl
+#: CRM/Campaign/Page/Campaign.php templates/CRM/Campaign/Form/Campaign.tpl
 msgid "Are you sure you want to delete this Campaign?"
 msgstr "Sei sicuro di voler cancellare questa campagna?"
 
@@ -597,6 +676,12 @@ msgid "Search Survey"
 msgstr "Cerca Sondaggio"
 
 #: CRM/Campaign/Page/DashBoard.php
+msgid "1 Day"
+msgid_plural "%count Days"
+msgstr[0] ""
+msgstr[1] ""
+
+#: CRM/Campaign/Page/DashBoard.php
 msgid "view result set"
 msgstr ""
 
@@ -649,10 +734,6 @@ msgid "Save as non voted."
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Gotv.tpl
-msgid "Vote Recorded."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Gotv.tpl
 msgid "Vote Cancelled."
 msgstr ""
 
@@ -672,8 +753,14 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition/Signature.tpl
 msgid ""
-"You have already signed this petition but you still <b>need to verify your email address</b>.</br>\n"
-"Please check your email inbox for the confirmation email. If you don't find it, verify if it isn't in your spam folder."
+"You have already signed this petition but you still <b>need to verify your "
+"email address</b>."
+msgstr ""
+
+#: templates/CRM/Campaign/Form/Petition/Signature.tpl
+msgid ""
+"Please check your email inbox for the confirmation email. If you don't find "
+"it, verify if it isn't in your spam folder."
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition.tpl
@@ -693,6 +780,10 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition.tpl
 msgid "Fields about the petition."
+msgstr ""
+
+#: templates/CRM/Campaign/Form/Petition.tpl
+msgid "Click here for new profile"
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Petition.tpl
@@ -735,10 +826,6 @@ msgid ""
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Campaign.tpl
-msgid "No campaigns found."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Search/Campaign.tpl
 #: templates/CRM/Campaign/Page/Campaign.tpl
 msgid "Add Campaign"
 msgstr ""
@@ -752,15 +839,7 @@ msgid "Status ID"
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
-msgid "No matching respondent found."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Search/EmptyResults.tpl
 msgid "if you are searching by respondent name, check your spelling"
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Search/Petition.tpl
-msgid "No petitions found."
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Petition.tpl
@@ -784,17 +863,9 @@ msgid "Search Petitions"
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "No surveys found."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
 #: templates/CRM/Campaign/Page/Petition.tpl
 #: templates/CRM/Campaign/Page/Survey.tpl
 msgid "Add Survey"
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Search/Survey.tpl
-msgid "Survey ID"
 msgstr ""
 
 #: templates/CRM/Campaign/Form/Search/Survey.tpl
@@ -947,8 +1018,10 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.hlp
 msgid ""
-"Your organization can use Campaigns to track all constituent interactions related to a particular fund-raising or engagement effort. You can link\n"
-"activities, contributions, event participation, mailings, membership signups, and pledges to a particular campaign."
+"Your organization can use Campaigns to track all constituent interactions "
+"related to a particular fund-raising or engagement effort. You can link "
+"activities, contributions, event participation, mailings, membership "
+"signups, and pledges to a particular campaign."
 msgstr ""
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
@@ -961,12 +1034,8 @@ msgstr ""
 
 #: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
 msgid ""
-"If you want to associate this record with a campaign, you can <a "
-"href=\"%1\">create a campaign here</a>."
-msgstr ""
-
-#: templates/CRM/Campaign/Page/Campaign.tpl
-msgid "No Campaigns found."
+"If you want to associate this record with a campaign, you can <a %1>create a"
+" campaign here</a>."
 msgstr ""
 
 #: templates/CRM/Campaign/Page/Petition/Confirm.tpl
@@ -1041,178 +1110,18 @@ msgstr ""
 msgid "Default Number Of Contacts"
 msgstr ""
 
-#: templates/CRM/Campaign/Page/Petition.tpl
-#: templates/CRM/Campaign/Page/Survey.tpl
-msgid "No survey found."
-msgstr ""
-
 #: templates/CRM/Campaign/Page/SurveyType.tpl
 msgid "There are no survey type entered. You can <a href='%1'>add one</a>."
 msgstr ""
 
-#: CRM/Campaign/DAO/Campaign.php
-msgid "Campaign External ID"
+#: CRM/Campaign/DAO/CampaignGroup.php
+msgid "Campaign Group ID"
 msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Campaign ID"
+#: CRM/Campaign/DAO/CampaignGroup.php
+msgid "Campaign Group Type"
 msgstr ""
 
-#: CRM/Campaign/DAO/Survey.php
-msgid "Follow up Interval"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Hold Duration"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Is Active"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Is Default Survey"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Created By"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Modified"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "Survey Modified On"
-msgstr ""
-
-#: CRM/Campaign/DAO/Survey.php
-msgid "No Email Verification"
-msgstr ""
-
-#: templates/CRM/Campaign/Form/addCampaignToComponent.tpl
-msgid ""
-"If you want to associate this record with a campaign, you can <a %1>create a"
-" campaign here</a>."
-msgstr ""
-
-#: CRM/Campaign/BAO/Petition.php
-msgid "Petition Id and/or Activity Id is not of the type Positive."
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "Respondent has been released."
-msgid_plural "%count respondents have been released."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "Released"
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Release.php
-msgid "1 respondent did not release."
-msgid_plural "%count respondents did not release."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "You can reserve a maximum of %count contact at a time for this survey."
-msgid_plural ""
-"You can reserve a maximum of %count contacts at a time for this survey."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "%count contact has been reserved."
-msgid_plural "%count contacts have been reserved."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "They have been added to %1."
-msgstr ""
-
-#: CRM/Campaign/Form/Task/Reserve.php
-msgid "Reservation did not add for %count contact."
-msgid_plural "Reservation did not add for %count contacts."
-msgstr[0] ""
-msgstr[1] ""
-
-#: CRM/Campaign/Info.php
-msgid "administer CiviCampaign"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Create new campaign, survey and petition types and their status"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "manage campaign"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Create new campaigns, surveys and petitions, reserve respondents"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "reserve campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Reserve campaign contacts for surveys and petitions"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "release campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Release reserved campaign contacts for surveys and petitions"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "interview campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Record survey and petition responses from their reserved contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "GOTV campaign contacts"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "Record that contacts voted"
-msgstr ""
-
-#: CRM/Campaign/Info.php
-msgid "sign CiviCRM Petition"
-msgstr ""
-
-#: CRM/Campaign/Page/DashBoard.php
-msgid "1 Day"
-msgid_plural "%count Days"
-msgstr[0] ""
-msgstr[1] ""
-
-#: templates/CRM/Campaign/Form/Petition/Signature.tpl
-msgid ""
-"You have already signed this petition but you still <b>need to verify your "
-"email address</b>."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/Petition/Signature.tpl
-msgid ""
-"Please check your email inbox for the confirmation email. If you don't find "
-"it, verify if it isn't in your spam folder."
-msgstr ""
-
-#: templates/CRM/Campaign/Form/addCampaignToComponent.hlp
-msgid ""
-"Your organization can use Campaigns to track all constituent interactions "
-"related to a particular fund-raising or engagement effort. You can link "
-"activities, contributions, event participation, mailings, membership "
-"signups, and pledges to a particular campaign."
+#: templates/CRM/Campaign/Page/SurveyType.tpl
+msgid "There are no survey types entered. You can <a href='%1'>add one</a>."
 msgstr ""
