--- a/po/is_IS/queue.po
+++ b/po/is_IS/queue.po
@@ -1,4 +1,4 @@
-# Copyright CiviCRM LLC (c) 2004-2012
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
@@ -6,16 +6,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2013-05-31 09:06-0400\n"
-"PO-Revision-Date: 2013-06-01 09:17+0000\n"
-"Last-Translator: Michał Mach <michau@gmail.com>\n"
-"Language-Team: Icelandic (Iceland) (http://www.transifex.com/projects/p/civicrm/language/is_IS/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Icelandic (Iceland) (http://www.transifex.com/civicrm/civicrm/language/is_IS/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: is_IS\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n % 10 != 1 || n % 100 == 11);\n"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
@@ -35,4 +34,8 @@ msgstr ""
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
+msgstr ""
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
 msgstr ""
