--- a/po/it_IT/menu.po
+++ b/po/it_IT/menu.po
@@ -14,8 +14,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
@@ -133,8 +133,8 @@ msgid "Case Activity"
 msgstr "Attività caso"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Rapporto caso"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -153,8 +153,8 @@ msgid "Assign to Another Client"
 msgstr "Assegna ad un altro utente"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Aggiungi Attività ad un Caso"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -178,10 +178,6 @@ msgstr "Stati del Caso"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Medie Incontri"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Cambia stato attività"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -256,6 +252,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Tipi di finanziaria"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr ""
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -273,9 +273,15 @@ msgstr "Carte di Credito Accettate"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Contributi"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Contributi Ricorrenti"
@@ -326,6 +332,23 @@ msgstr ""
 msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "Fattura PDF"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Email fattura"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -479,6 +502,11 @@ msgstr "Preferenze di Ricerca"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Preferenze data"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Menu di navigazione"
 
@@ -512,10 +540,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Promemoria Programma"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Questo non dovrebbe mai essere visto"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -533,6 +557,11 @@ msgstr "Formati Stampa Pagina (PDF)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Formati Saluti Email"
 
@@ -546,9 +575,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Formati Indirizzi"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Lingue, valuta, luogo"
+msgid "Languages, Currency, Locations"
+msgstr "Lingua, Moneta, Localita'"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -699,10 +729,6 @@ msgid "Administer CiviCRM"
 msgstr "Amministra CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Valori dell'Opzione"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Insiemi di prezzi"
 
@@ -770,10 +796,6 @@ msgstr "Costruttore Ricerca"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Ricerche personalizzate"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Ricerca Semplice"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -865,6 +887,10 @@ msgid "CiviCRM Blog"
 msgstr ""
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr "Cruscotto 'Caso'"
 
@@ -919,6 +945,10 @@ msgid "Import Activities"
 msgstr "Importa Attività"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Aggiorna CiviCRM"
 
@@ -955,12 +985,16 @@ msgid "Browse Uploaded files"
 msgstr "Sfoglia file caricati"
 
 msgctxt "menu"
-msgid "Delete file"
-msgstr "Cancella file"
+msgid "Delete File"
+msgstr ""
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Logout"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -973,6 +1007,10 @@ msgstr ""
 
 msgctxt "menu"
 msgid "ProfileEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Confirm dates"
 msgstr ""
 
 msgctxt "menu"
@@ -1070,6 +1108,10 @@ msgid "Event Online Registration"
 msgstr "Registrazione Online all'Evento"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Posti Conferenza"
 
@@ -1103,6 +1145,10 @@ msgstr "Rimuovi dal Carrello"
 msgctxt "menu"
 msgid "View Cart"
 msgstr "Mostra Carrello"
+
+msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
@@ -1157,8 +1203,8 @@ msgid "Resubscribe"
 msgstr "Sottoscrivi nuovamente"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Rimuovi"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1293,6 +1339,11 @@ msgstr "Elenco Report"
 msgctxt "menu"
 msgid "CiviCRM News"
 msgstr "Notizie CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1431,6 +1482,16 @@ msgstr "Cerca SMS di massa"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Report iscrizioni"
 
@@ -1536,11 +1597,6 @@ msgstr "Localizzazione"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Lingua, Moneta, Localita'"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Opzioni Lingua Preferita"
 
@@ -1558,6 +1614,11 @@ msgstr "Permessi (controllo accessi)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Impostazioni di Sistema"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1626,6 +1687,11 @@ msgstr "CiviPrestiti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviAssociati"
 
@@ -1636,8 +1702,13 @@ msgstr "Tutti i report"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Aiuto"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1646,18 +1717,43 @@ msgstr "Documentazione"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Forum della Community"
+msgid "Ask a question"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Partecipare"
+msgid "Get expert help"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
-msgstr "Informazioni su CiviCRM"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1884,6 +1980,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Riepilogo associati"
 
@@ -2053,144 +2154,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr ""
-
-msgctxt "menu"
-msgid "View Payment"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr ""
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr ""
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "Fattura PDF"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Email fattura"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Preferenze data"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr ""
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr ""
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr ""
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "New A/B Test"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
