--- a/po/it_IT/queue.po
+++ b/po/it_IT/queue.po
@@ -1,17 +1,17 @@
-# Copyright CiviCRM LLC (c) 2004-2011
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-#   <kal-el@hotmail.it>, 2012.
+# mitch.camp <kal-el@hotmail.it>, 2012
+# Massimo, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"Report-Msgid-Bugs-To: http://issues.civicrm.org/\n"
-"POT-Creation-Date: 2012-07-24 15:34-0400\n"
-"PO-Revision-Date: 2012-09-19 14:54+0000\n"
-"Last-Translator: mitch.camp <kal-el@hotmail.it>\n"
-"Language-Team: Italian (http://www.transifex.com/projects/p/civicrm/language/it/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Italian (http://www.transifex.com/civicrm/civicrm/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,7 +20,7 @@ msgstr ""
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
-msgstr "Nome Coda"
+msgstr "Nome Coda Attiva"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Submit Time"
@@ -37,3 +37,7 @@ msgstr "Dati oggetto Coda"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Messaggero Coda"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
